[package]
name = "exolvl"
version = "0.6.0"
edition = "2021"
authors = ["skycloudd"]
description = "A library for reading and writing Exoracer level files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skycloudd/exolvl"
keywords = ["exoracer", "exolvl", "gamedev"]
categories = ["parser-implementations"]
readme = "README.md"
exclude = [".github/*"]

[dependencies]
chrono = "0.4"
image = { version = "0.25.1", optional = true }
leb128 = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[features]
serde = ["dep:serde", "chrono/serde"]
image = ["dep:image"]
