[package]
name = "exolvl"
version = "0.11.0"
edition = "2021"
authors = ["skycloudd"]
description = "A library for reading and writing Exoracer level files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skycloudd/exolvl"
keywords = ["exoracer", "exolvl", "gamedev"]
categories = ["parser-implementations"]
readme = "README.md"
exclude = [".github/*"]

[dependencies]
chrono = "0.4"
cs-datetime-parse = "1.1.0"
flate2 = "1.0.34"
image = { version = "0.25", optional = true }
leb128 = "0.2"
ordered-float = "4.4.0"
serde = { version = "1.0", features = ["derive"], optional = true }
time = "0.3.36"
tracing = { version = "0.1.40", optional = true }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
concat-idents = "1.1.5"
difference = "2.0.0"

[features]
serde = ["dep:serde", "chrono/serde", "ordered-float/serde", "uuid/serde"]
image = ["dep:image"]
tracing = ["dep:tracing"]

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
